After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 785891 - The location Services status does not get updated when it gets enabled or disabled
The location Services status does not get updated when it gets enabled or dis...
Status: RESOLVED FIXED
Product: gnome-control-center
Classification: Core
Component: Privacy
3.24.x
Other Linux
: Normal normal
: ---
Assigned To: Rui Matos
Control-Center Maintainers
Depends on:
Blocks:
 
 
Reported: 2017-08-06 16:34 UTC by Julian Sparber
Modified: 2017-11-23 14:50 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
[PATCH] update location state in panel when it changes (1.58 KB, patch)
2017-11-20 18:06 UTC, Julian Sparber
none Details | Review
privacy: update location state in panel when it changes (1.17 KB, patch)
2017-11-21 15:28 UTC, Rui Matos
committed Details | Review

Description Julian Sparber 2017-08-06 16:34:31 UTC
The status of Location Services shown in the privacy setting does not get updated ones the user enables/disables the service. 
Steps to reproduce: 
Enable/disable location Service in gnome-control-center.

Until the user exits the privacy settings the Location Service remains off(or on).

Al other privacy settings are updated immediately.
Comment 1 Thomas Bechtold 2017-08-20 08:15:24 UTC
I can confirm that with gnome-control-center-3.24.3-1.1 on oenSUSE Tumbleweed.
Comment 2 Julian Sparber 2017-11-20 18:06:25 UTC
Created attachment 364070 [details] [review]
[PATCH] update location state in panel when it changes

I added a signal handler for changes of the location settings to update the panel.
Comment 3 Rui Matos 2017-11-21 15:28:22 UTC
Review of attachment 364070 [details] [review]:

thanks, I'll push a slightly modified version but keeping attribution to you
Comment 4 Rui Matos 2017-11-21 15:28:58 UTC
Created attachment 364125 [details] [review]
privacy: update location state in panel when it changes

Add a signal handler for changes of the location setting to update
(on/off/In use) lable.
Comment 5 Julian Sparber 2017-11-21 15:53:40 UTC
Fine with me. 
Is there any special reason you use g_signal_connect_object () instate of g_signal_connect_swapped ()?
Comment 6 Rui Matos 2017-11-21 16:07:09 UTC
(In reply to Julian Sparber from comment #5)
> Fine with me. 
> Is there any special reason you use g_signal_connect_object () instate of
> g_signal_connect_swapped ()?

GSettings instances (used to) have a non-obvious lifecycle[1] and in any case, experience has taught me that g_signal_connect_object() is almost always what you should use to be safe anyway.

[1] https://bugzilla.gnome.org/show_bug.cgi?id=780861#c15
Comment 7 Rui Matos 2017-11-23 14:50:27 UTC
Attachment 364125 [details] pushed as b083343 - privacy: update location state in panel when it changes