privacy: update location state in panel when it changes

Add a signal handler for changes of the location setting to update
(on/off/In use) lable.

https://bugzilla.gnome.org/show_bug.cgi?id=785891